...
        <item android:id="@+id/menu_item_about"
            android:title="@string/menu_about" 
            android:icon="@android:drawable/ic_menu_info_details"
            android:showAsAction="never"/>

        <item android:id="@+id/menu_item_quit"
            android:title="@string/menu_quit" 
            android:icon="@android:drawable/ic_lock_power_off"
            android:showAsAction="never"/>
    </group>

</menu>

